<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_news"
        android:textColor="@android:color/white" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/viewHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_warning_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txtError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_in_retrieving_data" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_small"
        android:indeterminate="true"
        android:progressTint="@color/colorPrimary"
        android:visibility="invisible" />
</FrameLayout>